--- a/Changes
+++ b/Changes
@@ -1,13 +1,16 @@
 # $Id$
 
 Revision history for Data::ObjectDriver
-0.07
+0.07 2010.03.22
     - When an object is changed, delete the cache instead of updating it.
       It is a bit more expensive, but should safer.
     - Fixed a uuv warning thanks to Kazuhiro Shibuya
     - Fixed a issue in the test suite for newer version of SQLite
       reported by Emmanuel Seyman
       http://rt.cpan.org/Ticket/Display.html?id=45186
+    - Fixed boggus bulk_insert() in the MySQL driver
+    - Fixed a perl5.11 warning
+    - In case you haven't noticed DOD is now on github, bye svn.
 
 0.06  2009.01.28
     - Added peek_next() method to ResultSet, q.v.
